--- a/themes/flexblock/layout/_partial/footer.ejs
+++ b/themes/flexblock/layout/_partial/footer.ejs
@@ -12,13 +12,13 @@
       <% } %>
     </div>
     <% } %> 
-    <p>&copy; <%= date(new Date(), 'YYYY') %> <a href="/" target="_blank"><%= config.author %></a></p>
+    <p>&copy; <%= date(new Date(), 'YYYY') %> <a href="/" target="_blank">Guduyili</a></p>
 
     <% if (theme.beian) { %>
       <p><a href="https://beian.miit.gov.cn" target="_blank"><%= theme.beian %></a></p>
     <% } %>
 
-    <p>Powered by <a href="https://hexo.io" target="_blank" rel="noopener noreferrer">Hexo</a> Theme - <a href="https://github.com/miiiku/flex-block" target="_blank" rel="noopener noreferrer author">flex-block</a></p>
+    <p>Powered by <a href="https://hexo.io" target="_blank" rel="noopener noreferrer">Hexo</a> Theme - <a href="https://github.com/guduyili" target="_blank" rel="noopener noreferrer author">GDYL-Blog</a></p>
 
     <p>
       <a href="javascript:;" id="theme-light">🌞 浅色</a>
