--- a/themes/flexblock/layout/_partial/header.ejs
+++ b/themes/flexblock/layout/_partial/header.ejs
@@ -68,7 +68,7 @@
         <div class="layout-margin">
           <h1 class="title-wrap"><%= page.title %></h1>
           <h2 class="title-sub-wrap">
-            <strong><%= page.author || config.author %></strong>
+            <strong>Guduyili</strong>
             <span>发布于</span>
             <%- partial("../_widget/date", { class_name: 'article-date', post: page, date_format: null }) %>
           </h2>
